--- a/Jun_bio.html
+++ b/Jun_bio.html
@@ -15,7 +15,7 @@
       <header>
         <div class="container">
           <span class="fa fa-bars menu-icon"></span>
-          <a class="header-logo" href="Jun_index.html">JUNICHIRO MATAGA</a>
+          <a class="header-logo" href="index.html">JUNICHIRO MATAGA</a>
           <span class="btn menu">MENU</span>
           <ul class="header-list">
             <li><a href="./Jun_index.html" class="list-btn">Top</a></li>
