--- a/Jun_bio.html
+++ b/Jun_bio.html
@@ -18,7 +18,7 @@
           <a class="header-logo" href="index.html">JUNICHIRO MATAGA</a>
           <span class="btn menu">MENU</span>
           <ul class="header-list">
-            <li><a href="./Jun_index.html" class="list-btn">Top</a></li>
+            <li><a href="./index.html" class="list-btn">Top</a></li>
             <li><a href="#" class="list-btn">Bio</a></li>
             <li><a href="#" class="list-btn">Itinerary</a></li>
             <li><a href="#" class="list-btn">Discography</a></li>
